// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ PinnedCodeCoverageReport ]] renders the code coverage pinned report widget: {"loadingValue":{"condition":"report-swap","status":true},"allowPinningReports":false} 1`] = `
"<div class=\\"border border-slate-400 py-4 pb-0.5 pt-4 rounded-md min-h-96\\">
  <div class=\\"px-5\\">
    <div class=\\"inline-flex h-8 w-full items-center justify-between\\">
      <h3 class=\\"inline-flex items-center gap-x-2 text-sm font-normal text-vanilla-100\\">
        Code Coverage

        <zicon-stub icon=\\"help\\" color=\\"vanilla-400\\" class=\\"hidden flex-shrink-0 stroke-1.5 transition-opacity duration-75 lg:inline v-popper--has-tooltip\\"></zicon-stub>
      </h3>
      <zbutton-stub button-type=\\"ghost\\" color=\\"vanilla-400\\" icon=\\"pie-chart\\" size=\\"small\\" class=\\"lg:hidden v-popper--has-tooltip\\"></zbutton-stub>
      <div class=\\"relative hidden h-10 lg:block w-11\\">
        <transition-stub name=\\"slide-fade\\">
          <div class=\\"absolute left-0 top-0 inline-flex h-full w-full items-center justify-end\\">
            <zicon-stub icon=\\"more-horizontal\\"></zicon-stub>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
  <div class=\\"mx-5 mt-5 h-72 animate-pulse rounded-lg bg-ink-300\\"></div>
</div>"
`;

exports[`[[ PinnedCodeCoverageReport ]] renders the code coverage pinned report widget: {"loadingValue":{"condition":"report-swap","status":true},"allowPinningReports":true} 1`] = `
"<div class=\\"border border-slate-400 py-4 pb-0.5 pt-4 rounded-md min-h-96\\">
  <div class=\\"px-5\\">
    <div class=\\"inline-flex h-8 w-full items-center justify-between\\">
      <h3 class=\\"inline-flex items-center gap-x-2 text-sm font-normal text-vanilla-100\\">
        Code Coverage

        <zicon-stub icon=\\"help\\" color=\\"vanilla-400\\" class=\\"hidden flex-shrink-0 stroke-1.5 transition-opacity duration-75 lg:inline v-popper--has-tooltip\\"></zicon-stub>
      </h3>
      <zbutton-stub button-type=\\"ghost\\" color=\\"vanilla-400\\" icon=\\"pie-chart\\" size=\\"small\\" class=\\"lg:hidden v-popper--has-tooltip\\"></zbutton-stub>
      <div class=\\"relative hidden h-10 lg:block w-19\\">
        <transition-stub name=\\"slide-fade\\">
          <div class=\\"absolute left-0 top-0 inline-flex h-full w-full items-center justify-end\\">
            <zicon-stub icon=\\"more-horizontal\\"></zicon-stub>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
  <div class=\\"mx-5 mt-5 h-72 animate-pulse rounded-lg bg-ink-300\\"></div>
</div>"
`;

exports[`[[ PinnedCodeCoverageReport ]] renders the code coverage pinned report widget: {"loadingValue":{"condition":null,"status":false},"allowPinningReports":false} 1`] = `
"<div class=\\"border border-slate-400 py-4 pb-0.5 pt-4 rounded-md min-h-96\\">
  <div class=\\"px-5\\">
    <div class=\\"inline-flex h-8 w-full items-center justify-between\\">
      <h3 class=\\"inline-flex items-center gap-x-2 text-sm font-normal text-vanilla-100\\">
        Code Coverage

        <zicon-stub icon=\\"help\\" color=\\"vanilla-400\\" class=\\"hidden flex-shrink-0 stroke-1.5 transition-opacity duration-75 lg:inline v-popper--has-tooltip\\"></zicon-stub>
      </h3>
      <zbutton-stub button-type=\\"ghost\\" color=\\"vanilla-400\\" icon=\\"pie-chart\\" size=\\"small\\" class=\\"lg:hidden v-popper--has-tooltip\\"></zbutton-stub>
      <div class=\\"relative hidden h-10 lg:block w-11\\">
        <transition-stub name=\\"slide-fade\\">
          <div class=\\"absolute left-0 top-0 inline-flex h-full w-full items-center justify-end\\">
            <zicon-stub icon=\\"more-horizontal\\"></zicon-stub>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
  <codecoveragetable-stub selected-sort-filter=\\"\\" is-widget=\\"true\\" linked-rows=\\"true\\" repo-coverage-list=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" class=\\"hide-scroll\\"></codecoveragetable-stub>
</div>"
`;

exports[`[[ PinnedCodeCoverageReport ]] renders the code coverage pinned report widget: {"loadingValue":{"condition":null,"status":false},"allowPinningReports":true} 1`] = `
"<div class=\\"border border-slate-400 py-4 pb-0.5 pt-4 rounded-md min-h-96\\">
  <div class=\\"px-5\\">
    <div class=\\"inline-flex h-8 w-full items-center justify-between\\">
      <h3 class=\\"inline-flex items-center gap-x-2 text-sm font-normal text-vanilla-100\\">
        Code Coverage

        <zicon-stub icon=\\"help\\" color=\\"vanilla-400\\" class=\\"hidden flex-shrink-0 stroke-1.5 transition-opacity duration-75 lg:inline v-popper--has-tooltip\\"></zicon-stub>
      </h3>
      <zbutton-stub button-type=\\"ghost\\" color=\\"vanilla-400\\" icon=\\"pie-chart\\" size=\\"small\\" class=\\"lg:hidden v-popper--has-tooltip\\"></zbutton-stub>
      <div class=\\"relative hidden h-10 lg:block w-19\\">
        <transition-stub name=\\"slide-fade\\">
          <div class=\\"absolute left-0 top-0 inline-flex h-full w-full items-center justify-end\\">
            <zicon-stub icon=\\"more-horizontal\\"></zicon-stub>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
  <codecoveragetable-stub selected-sort-filter=\\"\\" is-widget=\\"true\\" linked-rows=\\"true\\" repo-coverage-list=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" class=\\"hide-scroll\\"></codecoveragetable-stub>
</div>"
`;
